Opened 9 years ago
Closed 8 years ago
#6675 closed defect (fixed)
Cineform decoder distorts lower 8 pixels on 1080 video
| Reported by: | Garbord | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | CFHD |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
The lower 8 pixels of 1080 height video distorts when decoding Cineform video.
This does not occur when tested against 1088 height so may be related to 1080 not being divisible by 16.
This is also visible when replayed in ffplay.
The same source file does not show the same errors when replayed in Windows Media Player, using the installable GoPro Cineform codecs.
I've been able to see this on multiple clips. All generated from Adobe Premier Pro CC.
How to reproduce:
% ffmpeg -i input.mov -vcodec rawvideo -pix_fmt bgr24 output.mov ffmpeg version N-87327-g18821e3 Copyright (c) 2000-2017 the FFmpeg developers built with gcc 7.2.0 (GCC)
Attachments (3)
Change History (14)
by , 9 years ago
| Attachment: | ffmpeg-20170920-152131_TRUNC.log added |
|---|
comment:1 by , 9 years ago
Uploaded sample file 'Cineform_Bottom_8_Pixel_Distort_1080_YUV.mov' via VLC Uploader.
follow-up: 3 comment:2 by , 9 years ago
Unfortunately, I don't see the file there (the upload site may not work at all).
Please use datafilehost or dropbox or another file hosting site of your choice.
comment:3 by , 9 years ago
Replying to cehoyos:
Unfortunately, I don't see the file there (the upload site may not work at all).
Please use datafilehost or dropbox or another file hosting site of your choice.
I've uploaded the sample file here:
https://drive.google.com/open?id=0B9D-zOmjHZlrTUpCRnVldmNhTm8
I've also included a png screenshot and full version of the log.
comment:4 by , 9 years ago
| Keywords: | CFHD added |
|---|---|
| Priority: | important → normal |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
Thank you for the sample, I agree that it shows a possible issue with FFmpeg.
I am not sure I understand completely though:
On the file host, you provided an output file for comparison (you should not never do that unless asked, this ticket is another good example why), the png image looks very colourful here, and a little ugly on the bottom, as indicated by you.
You also uploaded a cineform file (I wonder why it is so big: Is there any difference between the first frame and the other frames, except for the timestamp?) - it looks less colourful here, actually black-and-white.
Is there any connection between the mov file and the png file you provided? Is the bug that the mov file is supposed to show colours other than black and white?
Just allow me to say that I am not 100% convinced that uploading a 1GB sample with three (or four?) different frames is super-useful.
Not a regression afaict.
comment:5 by , 9 years ago
Sample with the most obvious distortions uploaded:
http://samples.ffmpeg.org/ffmpeg-bugs/trac/ticket6675/
comment:6 by , 9 years ago
Sorry, its the first time Ive submitted a bug. I will keep samples smaller in the future.
comment:7 by , 9 years ago
The distortion is also visible with Cineform RGB files, though less obvious.
comment:9 by , 9 years ago
Thanks, I'll check this against some different export files tomorrow.
Off topic I know, but now that GoPro have open sourced their code are there any plans to integrate an encoder? I was hoping to talk to someone to get an idea of the technical challenges involved, to see if it is something to hope for in the near future. Is there a particular point of contact I can discuss this with?
comment:10 by , 9 years ago
Distortion still visible on all submitted sample files (bw1, bw2, colour).
I tested using Zerano Windows build (x64) version N-89212-ga60b2425c3 (https://ffmpeg.zeranoe.com/builds/win64/static/ffmpeg-20171123-a60b242-win64-static.zip)
comment:11 by , 8 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Fixed in 673604e0e3b7c7d6a077f61dee322d534ff6eae5.



Truncated log of ffmpeg console output